syntax = "proto3";
package g2engine;

option go_package = "github.com/senzing/go-servegrpc/protobuf/g2engine";

service G2Engine {
  rpc AddRecord(AddRecordRequestRequest) returns (AddRecordResponseResponse) {}
  rpc AddRecordWithInfo(AddRecordWithInfoRequest) returns (AddRecordWithInfoResponse) {}
  rpc AddRecordWithInfoWithReturnedRecordID(AddRecordWithInfoWithReturnedRecordIDRequest) returns (AddRecordWithInfoWithReturnedRecordIDResponse) {}
  rpc AddRecordWithReturnedRecordID(AddRecordWithReturnedRecordIDRequest) returns (AddRecordWithReturnedRecordIDResponse) {}
  rpc CheckRecord(CheckRecordRequest) returns (CheckRecordResponse) {}
  rpc ClearLastException(ClearLastExceptionRequest) returns (ClearLastExceptionResponse) {}
  rpc CloseExport(CloseExportRequest) returns (CloseExportResponse) {}
  rpc CountRedoRecords(CountRedoRecordsRequest) returns (CountRedoRecordsResponse) {}
  rpc DeleteRecord(DeleteRecordRequest) returns (DeleteRecordResponse) {}
  rpc DeleteRecordWithInfo(DeleteRecordWithInfoRequest) returns (DeleteRecordWithInfoResponse) {}
  rpc Destroy(DestroyRequest) returns (DestroyResponse) {}
  rpc ExportConfig(ExportConfigRequest) returns (ExportConfigResponse) {}
  rpc ExportConfigAndConfigID(ExportConfigAndConfigIDRequest) returns (ExportConfigAndConfigIDResponse) {}
  rpc ExportCSVEntityReport(ExportCSVEntityReportRequest) returns (ExportCSVEntityReportResponse) {}
  rpc ExportJSONEntityReport(ExportJSONEntityReportRequest) returns (ExportJSONEntityReportResponse) {}
  rpc FetchNext(FetchNextRequest) returns (FetchNextResponse) {}
  rpc FindInterestingEntitiesByEntityID(FindInterestingEntitiesByEntityIDRequest) returns (FindInterestingEntitiesByEntityIDResponse) {}
  rpc FindInterestingEntitiesByRecordID(FindInterestingEntitiesByRecordIDRequest) returns (FindInterestingEntitiesByRecordIDResponse) {}
  rpc FindNetworkByEntityID(FindNetworkByEntityIDRequest) returns (FindNetworkByEntityIDResponse) {}
  rpc FindNetworkByEntityID_V2(FindNetworkByEntityID_V2Request) returns (FindNetworkByEntityID_V2Response) {}
  rpc FindNetworkByRecordID(FindNetworkByRecordIDRequest) returns (FindNetworkByRecordIDResponse) {}
  rpc FindNetworkByRecordID_V2(FindNetworkByRecordID_V2Request) returns (FindNetworkByRecordID_V2Response) {}
  rpc FindPathByEntityID(FindPathByEntityIDRequest) returns (FindPathByEntityIDResponse) {}
  rpc FindPathByEntityID_V2(FindPathByEntityID_V2Request) returns (FindPathByEntityID_V2Response) {}
  rpc FindPathByRecordID(FindPathByRecordIDRequest) returns (FindPathByRecordIDResponse) {}
  rpc FindPathByRecordID_V2(FindPathByRecordID_V2Request) returns (FindPathByRecordID_V2Response) {}
  rpc FindPathExcludingByEntityID(FindPathExcludingByEntityIDRequest) returns (FindPathExcludingByEntityIDResponse) {}
  rpc FindPathExcludingByEntityID_V2(FindPathExcludingByEntityID_V2Request) returns (FindPathExcludingByEntityID_V2Response) {}
  rpc FindPathExcludingByRecordID(FindPathExcludingByRecordIDRequest) returns (FindPathExcludingByRecordIDResponse) {}
  rpc FindPathExcludingByRecordID_V2(FindPathExcludingByRecordID_V2Request) returns (FindPathExcludingByRecordID_V2Response) {}
  rpc FindPathIncludingSourceByEntityID(FindPathIncludingSourceByEntityIDRequest) returns (FindPathIncludingSourceByEntityIDResponse) {}
  rpc FindPathIncludingSourceByEntityID_V2(FindPathIncludingSourceByEntityID_V2Request) returns (FindPathIncludingSourceByEntityID_V2Response) {}
  rpc FindPathIncludingSourceByRecordID(FindPathIncludingSourceByRecordIDRequest) returns (FindPathIncludingSourceByRecordIDResponse) {}
  rpc FindPathIncludingSourceByRecordID_V2(FindPathIncludingSourceByRecordID_V2Request) returns (FindPathIncludingSourceByRecordID_V2Response) {}
  rpc GetActiveConfigID(GetActiveConfigIDRequest) returns (GetActiveConfigIDResponse) {}
  rpc GetEntityByEntityID(GetEntityByEntityIDRequest) returns (GetEntityByEntityIDResponse) {}
  rpc GetEntityByEntityID_V2(GetEntityByEntityID_V2Request) returns (GetEntityByEntityID_V2Response) {}
  rpc GetEntityByRecordID(GetEntityByRecordIDRequest) returns (GetEntityByRecordIDResponse) {}
  rpc GetEntityByRecordID_V2(GetEntityByRecordID_V2Request) returns (GetEntityByRecordID_V2Response) {}
  rpc GetLastException(GetLastExceptionRequest) returns (GetLastExceptionResponse) {}
  rpc GetLastExceptionCode(GetLastExceptionCodeRequest) returns (GetLastExceptionCodeResponse) {}
  rpc GetRecord(GetRecordRequest) returns (GetRecordResponse) {}
  rpc GetRecord_V2(GetRecord_V2Request) returns (GetRecord_V2Response) {}
  rpc GetRedoRecord(GetRedoRecordRequest) returns (GetRedoRecordResponse) {}
  rpc GetRepositoryLastModifiedTime(GetRepositoryLastModifiedTimeRequest) returns (GetRepositoryLastModifiedTimeResponse) {}
  rpc GetVirtualEntityByRecordID(GetVirtualEntityByRecordIDRequest) returns (GetVirtualEntityByRecordIDResponse) {}
  rpc GetVirtualEntityByRecordID_V2(GetVirtualEntityByRecordID_V2Request) returns (GetVirtualEntityByRecordID_V2Response) {}
  rpc HowEntityByEntityID(HowEntityByEntityIDRequest) returns (HowEntityByEntityIDResponse) {}
  rpc HowEntityByEntityID_V2(HowEntityByEntityID_V2Request) returns (HowEntityByEntityID_V2Response) {}
  rpc Init(InitRequest) returns (InitResponse) {}
  rpc InitWithConfigID(InitWithConfigIDRequest) returns (InitWithConfigIDResponse) {}
  rpc PrimeEngine(PrimeEngineRequest) returns (PrimeEngineResponse) {}
  rpc Process(ProcessRequest) returns (ProcessResponse) {}
  rpc ProcessRedoRecord(ProcessRedoRecordRequest) returns (ProcessRedoRecordResponse) {}
  rpc ProcessRedoRecordWithInfo(ProcessRedoRecordWithInfoRequest) returns (ProcessRedoRecordWithInfoResponse) {}
  rpc ProcessWithInfo(ProcessWithInfoRequest) returns (ProcessWithInfoResponse) {}
  rpc ProcessWithResponse(ProcessWithResponseRequest) returns (ProcessWithResponseResponse) {}
  rpc ProcessWithResponseResize(ProcessWithResponseResizeRequest) returns (ProcessWithResponseResizeResponse) {}
  rpc PurgeRepository(PurgeRepositoryRequest) returns (PurgeRepositoryResponse) {}
  rpc ReevaluateEntity(ReevaluateEntityRequest) returns (ReevaluateEntityResponse) {}
  rpc ReevaluateEntityWithInfo(ReevaluateEntityWithInfoRequest) returns (ReevaluateEntityWithInfoResponse) {}
  rpc ReevaluateRecord(ReevaluateRecordRequest) returns (ReevaluateRecordResponse) {}
  rpc ReevaluateRecordWithInfo(ReevaluateRecordWithInfoRequest) returns (ReevaluateRecordWithInfoResponse) {}
  rpc Reinit(ReinitRequest) returns (ReinitResponse) {}
  rpc ReplaceRecord(ReplaceRecordRequest) returns (ReplaceRecordResponse) {}
  rpc ReplaceRecordWithInfo(ReplaceRecordWithInfoRequest) returns (ReplaceRecordWithInfoResponse) {}
  rpc SearchByAttributes(SearchByAttributesRequest) returns (SearchByAttributesResponse) {}
  rpc SearchByAttributes_V2(SearchByAttributes_V2Request) returns (SearchByAttributes_V2Response) {}
  rpc Stats(StatsRequest) returns (StatsResponse) {}
  rpc WhyEntities(WhyEntitiesRequest) returns (WhyEntitiesResponse) {}
  rpc WhyEntities_V2(WhyEntities_V2Request) returns (WhyEntities_V2Response) {}
  rpc WhyEntityByEntityID(WhyEntityByEntityIDRequest) returns (WhyEntityByEntityIDResponse) {}
  rpc WhyEntityByEntityID_V2(WhyEntityByEntityID_V2Request) returns (WhyEntityByEntityID_V2Response) {}
  rpc WhyEntityByRecordID(WhyEntityByRecordIDRequest) returns (WhyEntityByRecordIDResponse) {}
  rpc WhyEntityByRecordID_V2(WhyEntityByRecordID_V2Request) returns (WhyEntityByRecordID_V2Response) {}
  rpc WhyRecords(WhyRecordsRequest) returns (WhyRecordsResponse) {}
  rpc WhyRecords_V2(WhyRecords_V2Request) returns (WhyRecords_V2Response) {}
}

message AddRecordRequestRequest {
  string dataSourceCode = 1;
  string recordID = 2;
  string jsonData = 3;
  string loadID = 4;
}

message AddRecordResponseResponse {}

message AddRecordWithInfoRequest {
  string dataSourceCode = 1;
  string recordID = 2;
  string jsonData = 3;
  string loadID = 4;
  int64 flags = 5;
}

message AddRecordWithInfoResponse {
  string result = 1;
}

message AddRecordWithInfoWithReturnedRecordIDRequest {
  string dataSourceCode = 1;
  string jsonData = 2;
  string loadID = 3;
  int64 flags = 4;
}

message AddRecordWithInfoWithReturnedRecordIDResponse {
  string withInfo = 1;
  string recordID = 2;
}

message AddRecordWithReturnedRecordIDRequest {
  string dataSourceCode = 1;
  string jsonData = 2;
  string loadID = 3;
}

message AddRecordWithReturnedRecordIDResponse {
  string result = 1;
}

message CheckRecordRequest {
  string record = 1;
  string recordQueryList = 2;
}

message CheckRecordResponse {
  string result = 1;
}

message ClearLastExceptionRequest {}

message ClearLastExceptionResponse {}

message CloseExportRequest {
  string responseHandle = 1;
}

message CloseExportResponse {}

message CountRedoRecordsRequest {}

message CountRedoRecordsResponse {
  int64 result = 1;
}

message DeleteRecordRequest {
  string dataSourceCode = 1;
  string recordID = 2;
  string loadID = 3;
}

message DeleteRecordResponse {}

message DeleteRecordWithInfoRequest {
  string dataSourceCode = 1;
  string recordID = 2;
  string loadID = 3;
  int64 flags = 4;
}

message DeleteRecordWithInfoResponse {
  string result = 1;
}

message DestroyRequest {}

message DestroyResponse {}

message ExportConfigRequest {}

message ExportConfigResponse {
  string result = 1;
}

message ExportConfigAndConfigIDRequest {}

message ExportConfigAndConfigIDResponse {
  string config = 1;
  int64 configID = 2;
}

message ExportCSVEntityReportRequest {
  string csvColumnList = 1;
  int64 flags = 2;
}

message ExportCSVEntityReportResponse {
  string result = 1;
}

message ExportJSONEntityReportRequest {
  int64 flags = 1;
}

message ExportJSONEntityReportResponse {
  string result = 1;
}

message FetchNextRequest {
  string responseHandle = 1;
}

message FetchNextResponse {
  string result = 1;
}

message FindInterestingEntitiesByEntityIDRequest {
  int64 entityID = 1;
  int64 flags = 2;
}
message FindInterestingEntitiesByEntityIDResponse {
  string result = 1;
}

message FindInterestingEntitiesByRecordIDRequest {
  string dataSourceCode = 1;
  string recordID = 2;
  int64 flags = 3;
}

message FindInterestingEntitiesByRecordIDResponse {
  string result = 1;
}

message FindNetworkByEntityIDRequest {
  string entityList = 1;
  int32 maxDegree = 2;
  int32 buildOutDegree = 3;
  int32 maxEntities = 4;
}

message FindNetworkByEntityIDResponse {
  string result = 1;
}

message FindNetworkByEntityID_V2Request {
  string entityList = 1;
  int32 maxDegree = 2;
  int32 buildOutDegree = 3;
  int32 maxEntities = 4;
  int64 flags = 5;
}

message FindNetworkByEntityID_V2Response {
  string result = 1;
}

message FindNetworkByRecordIDRequest {
  string recordList = 1;
  int32 maxDegree = 2;
  int32 buildOutDegree = 3;
  int32 maxEntities = 4;
}

message FindNetworkByRecordIDResponse {
  string result = 1;
}

message FindNetworkByRecordID_V2Request {
  string recordList = 1;
  int32 maxDegree = 2;
  int32 buildOutDegree = 3;
  int32 maxEntities = 4;
  int64 flags = 5;
}

message FindNetworkByRecordID_V2Response {
  string result = 1;
}

message FindPathByEntityIDRequest {
  int64 entityID1 = 1;
  int64 entityID2 = 2;
  int32 maxDegree = 3;
}

message FindPathByEntityIDResponse {
  string result = 1;
}
message FindPathByEntityID_V2Request {
  int64 entityID1 = 1;
  int64 entityID2 = 2;
  int32 maxDegree = 3;
  int64 flags = 4;
}

message FindPathByEntityID_V2Response {
  string result = 1;
}

message FindPathByRecordIDRequest {
  string dataSourceCode1 = 1;
  string recordID1 = 2;
  string dataSourceCode2 = 3;
  string recordID2 = 4;
  int32 maxDegree = 5;
}

message FindPathByRecordIDResponse {
  string result = 1;
}

message FindPathByRecordID_V2Request {
  string dataSourceCode1 = 1;
  string recordID1 = 2;
  string dataSourceCode2 = 3;
  string recordID2 = 4;
  int32 maxDegree = 5;
  int64 flags = 6;
}

message FindPathByRecordID_V2Response {
  string result = 1;
}

message FindPathExcludingByEntityIDRequest {
  int64 entityID1 = 1;
  int64 entityID2 = 2;
  int32 maxDegree = 3;
  string excludedEntities = 4;
}

message FindPathExcludingByEntityIDResponse {
  string result = 1;
}

message FindPathExcludingByEntityID_V2Request {
  int64 entityID1 = 1;
  int64 entityID2 = 2;
  int32 maxDegree = 3;
  string excludedEntities = 4;
  int64 flags = 5;
}

message FindPathExcludingByEntityID_V2Response {
  string result = 1;
}

message FindPathExcludingByRecordIDRequest {
  string dataSourceCode1 = 1;
  string recordID1 = 2;
  string dataSourceCode2 = 3;
  string recordID2 = 4;
  int32 maxDegree = 5;
  string excludedRecords = 6;
}

message FindPathExcludingByRecordIDResponse {
  string result = 1;
}

message FindPathExcludingByRecordID_V2Request {
  string dataSourceCode1 = 1;
  string recordID1 = 2;
  string dataSourceCode2 = 3;
  string recordID2 = 4;
  int32 maxDegree = 5;
  string excludedRecords = 6;
  int64 flags = 7;
}

message FindPathExcludingByRecordID_V2Response {
  string result = 1;
}

message FindPathIncludingSourceByEntityIDRequest {
  int64 entityID1 = 1;
  int64 entityID2 = 2;
  int32 maxDegree = 3;
  string excludedEntities = 4;
  string requiredDsrcs = 5;
}

message FindPathIncludingSourceByEntityIDResponse {
  string result = 1;
}

message FindPathIncludingSourceByEntityID_V2Request {
  int64 entityID1 = 1;
  int64 entityID2 = 2;
  int32 maxDegree = 3;
  string excludedEntities = 4;
  string requiredDsrcs = 5;
  int64 flags = 6;
}

message FindPathIncludingSourceByEntityID_V2Response {
  string result = 1;
}

message FindPathIncludingSourceByRecordIDRequest {
  string dataSourceCode1 = 1;
  string recordID1 = 2;
  string dataSourceCode2 = 3;
  string recordID2 = 4;
  int32 maxDegree = 5;
  string excludedRecords = 6;
  string requiredDsrcs = 7;
}

message FindPathIncludingSourceByRecordIDResponse {
  string result = 1;
}

message FindPathIncludingSourceByRecordID_V2Request {
  string dataSourceCode1 = 1;
  string recordID1 = 2;
  string dataSourceCode2 = 3;
  string recordID2 = 4;
  int32 maxDegree = 5;
  string excludedRecords = 6;
  string requiredDsrcs = 7;
  int64 flags = 8;
}

message FindPathIncludingSourceByRecordID_V2Response {
  string result = 1;
}

message GetActiveConfigIDRequest {}

message GetActiveConfigIDResponse {
  int64 result = 1;
}

message GetEntityByEntityIDRequest {
  int64 entityID = 1;
}

message GetEntityByEntityIDResponse {
  string result = 1;
}

message GetEntityByEntityID_V2Request {
  int64 entityID = 1;
  int64 flags = 2;
}

message GetEntityByEntityID_V2Response {
  string result = 1;
}

message GetEntityByRecordIDRequest {
  string dataSourceCode = 1;
  string recordID = 2;
}

message GetEntityByRecordIDResponse {
  string result = 1;
}

message GetEntityByRecordID_V2Request {
  string dataSourceCode = 1;
  string recordID = 2;
  int64 flags = 3;
}

message GetEntityByRecordID_V2Response {
  string result = 1;
}

message GetLastExceptionRequest {}

message GetLastExceptionResponse {
  string result = 1;
}

message GetLastExceptionCodeRequest {}

message GetLastExceptionCodeResponse {
  int32 result = 1;
}

message GetRecordRequest {
  string dataSourceCode = 1;
  string recordID = 2;
}

message GetRecordResponse {
  string result = 1;
}

message GetRecord_V2Request {
  string dataSourceCode = 1;
  string recordID = 2;
  int64 flags = 3;
}

message GetRecord_V2Response {
  string result = 1;
}

message GetRedoRecordRequest {}

message GetRedoRecordResponse {
  string result = 1;
}

message GetRepositoryLastModifiedTimeRequest {}

message GetRepositoryLastModifiedTimeResponse {
  int64 result = 1;
}

message GetVirtualEntityByRecordIDRequest {
  string recordList = 1;
}

message GetVirtualEntityByRecordIDResponse {
  string result = 1;
}
message GetVirtualEntityByRecordID_V2Request {
  string recordList = 1;
  int64 flags = 2;
}

message GetVirtualEntityByRecordID_V2Response {
  string result = 1;
}

message HowEntityByEntityIDRequest {
  int64 entityID = 1;
}

message HowEntityByEntityIDResponse {
  string result = 1;
}

message HowEntityByEntityID_V2Request {
  int64 entityID = 1;
  int64 flags = 2;
}

message HowEntityByEntityID_V2Response {
  string result = 1;
}

message InitRequest {
  string moduleName = 1;
  string iniParams = 2;
  int32 verboseLogging = 3;
}

message InitResponse {}

message InitWithConfigIDRequest {
  string moduleName = 1;
  string iniParams = 2;
  int64 initConfigID = 3;
  int32 verboseLogging = 4;
}

message InitWithConfigIDResponse {}

message PrimeEngineRequest {}

message PrimeEngineResponse {}

message ProcessRequest {
  string record = 1;
}

message ProcessResponse {}

message ProcessRedoRecordRequest {}

message ProcessRedoRecordResponse {
  string result = 1;
}

message ProcessRedoRecordWithInfoRequest {
  int64 flags = 1;
}

message ProcessRedoRecordWithInfoResponse {
  string result = 1;
  string withInfo = 2;
}

message ProcessWithInfoRequest {
  string record = 1;
  int64 flags = 2;
}

message ProcessWithInfoResponse {
  string result = 1;
}

message ProcessWithResponseRequest {
  string record = 1;
}

message ProcessWithResponseResponse {
  string result = 1;
}

message ProcessWithResponseResizeRequest {
  string record = 1;
}

message ProcessWithResponseResizeResponse {
  string result = 1;
}

message PurgeRepositoryRequest {}

message PurgeRepositoryResponse {}

message ReevaluateEntityRequest {
  int64 entityID = 1;
  int64 flags = 2;
}

message ReevaluateEntityResponse {}

message ReevaluateEntityWithInfoRequest {
  int64 entityID = 1;
  int64 flags = 2;
}

message ReevaluateEntityWithInfoResponse {
  string result = 1;
}

message ReevaluateRecordRequest {
  string dataSourceCode = 1;
  string recordID = 2;
  int64 flags = 3;
}

message ReevaluateRecordResponse {}

message ReevaluateRecordWithInfoRequest {
  string dataSourceCode = 1;
  string recordID = 2;
  int64 flags = 3;
}

message ReevaluateRecordWithInfoResponse {
  string result = 1;
}

message ReinitRequest {
  int64 initConfigID = 1;
}

message ReinitResponse {}

message ReplaceRecordRequest {
  string dataSourceCode = 1;
  string recordID = 2;
  string jsonData = 3;
  string loadID = 4;
}

message ReplaceRecordResponse {}

message ReplaceRecordWithInfoRequest {
  string dataSourceCode = 1;
  string recordID = 2;
  string jsonData = 3;
  string loadID = 4;
  int64 flags = 5;
}

message ReplaceRecordWithInfoResponse {
  string result = 1;
}

message SearchByAttributesRequest {
  string jsonData = 1;
}

message SearchByAttributesResponse {
  string result = 1;
}

message SearchByAttributes_V2Request {
  string jsonData = 1;
  int64 flags = 2;
}

message SearchByAttributes_V2Response {
  string result = 1;
}

message StatsRequest {}

message StatsResponse {
  string result = 1;
}

message WhyEntitiesRequest {
  int64 entityID1 = 1;
  int64 entityID2 = 2;
}

message WhyEntitiesResponse {
  string result = 1;
}

message WhyEntities_V2Request {
  int64 entityID1 = 1;
  int64 entityID2 = 2;
  int64 flags = 3;
}

message WhyEntities_V2Response {
  string result = 1;
}

message WhyEntityByEntityIDRequest {
  int64 entityID = 1;
}

message WhyEntityByEntityIDResponse {
  string result = 1;
}

message WhyEntityByEntityID_V2Request {
  int64 entityID = 1;
  int64 flags = 2;
}

message WhyEntityByEntityID_V2Response {
  string result = 1;
}

message WhyEntityByRecordIDRequest {
  string dataSourceCode = 1;
  string recordID = 2;
}

message WhyEntityByRecordIDResponse {
  string result = 1;
}

message WhyEntityByRecordID_V2Request {
  string dataSourceCode = 1;
  string recordID = 2;
  int64 flags = 3;
}
message WhyEntityByRecordID_V2Response {
  string result = 1;
}

message WhyRecordsRequest {
  string dataSourceCode1 = 1;
  string recordID1 = 2;
  string dataSourceCode2 = 3;
  string recordID2 = 4;
}

message WhyRecordsResponse {
  string result = 1;
}

message WhyRecords_V2Request {
  string dataSourceCode1 = 1;
  string recordID1 = 2;
  string dataSourceCode2 = 3;
  string recordID2 = 4;
  int64 flags = 5;
}
message WhyRecords_V2Response {
  string result = 1;
}
